[package]
name = "umbreon-mobile"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.5", features = ["signals"] }
dioxus-mobile = "0.5"
feed-rs = "1"
reqwest = { workspace = true }
serde = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
url = "2"
ammonia = "4"
tracing-subscriber = { workspace = true }
