[package]
name = "umbreon-mobile"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.5", features = ["signals"] }
dioxus-mobile = "0.5"
feed-rs = "1"
reqwest = { workspace = true }
serde = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
url = "2"
ammonia = "4"
chrono = "0.4"
tracing-subscriber = { workspace = true }
web-sys = { version = "0.3", features = ["Window", "Storage", "Document", "Element"] }
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
